--- a/html/mathjax-load.html
+++ b/html/mathjax-load.html
@@ -1,10 +1,8 @@
+<script src="/resources/mathjax_config.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-chtml.min.js"></script>
 <script type="module">
-    import "$resources/mathjax_config.js";
-
-    import("mathjax/es5/tex-chtml.js").then(() =>
-        MathJax.typesetPromise().then(() => {
-            $(".tex-image").hide();
-            $(".tex-text").show();
-        }),
-    );
+    MathJax.typesetPromise().then(() => {
+        $(".tex-image").hide();
+        $(".tex-text").show();
+    });
 </script>
